# PMOSS

./: .gitignore  CMakeLists.txt  README.md  ab.txt  baselines_readme.txt  linux_6.8.0-55.57.dsc  ls.txt  run_script.sh  test.txt
kb_b__/14/: data_view.txt  query-exec_view.txt
kb_b__/2/: data_view.txt  mem-channel_view.txt  query-exec_view.txt
kb_b__/26/: data_view.txt  query-exec_view.txt
kb_b__/38/: data_view.txt  query-exec_view.txt
kb_b__/50/: data_view.txt  query-exec_view.txt
kb_b__/62/: data_view.txt  query-exec_view.txt
kb_b__/74/: data_view.txt  query-exec_view.txt
kb_b__/86/: data_view.txt  query-exec_view.txt
learned/: run_dt_place.py  run_dt_place_original.py  yr_utils.py
learned/mingpt/: model_placement.py  model_placement_original.py  trainer_placement.py  trainer_placement_original.py  utils.py  utils_original.py
results/: adms_chiplet_results.txt  adms_results.txt  damon_results.txt
src/: compile.sh  erebus  erebus.cpp  erebus.hpp  threadpool
src/config/: c_500.txt  config.cpp  config.txt
src/config/amd-machine-configs/: config_1.txt  config_10.txt  config_11.txt  config_12.txt  config_13.txt  config_14.txt  config_15.txt  config_16.txt  config_17.txt  config_18.txt  config_19.txt  config_2.txt  config_20.txt  config_21.txt  config_22.txt  config_23.txt  config_24.txt  config_25.txt  config_26.txt  config_27.txt  config_28.txt  config_29.txt  config_3.txt  config_30.txt  config_31.txt  config_32.txt  config_33.txt  config_34.txt  config_35.txt  config_36.txt  config_37.txt  config_38.txt  config_39.txt  config_4.txt  config_40.txt  config_41.txt  config_42.txt  config_43.txt  config_44.txt  config_45.txt  (+19 more)
src/config/amd_epyc7302_2s_2n/: c_0_256.txt  c_101_256.txt  c_102_256.txt  c_10_256.txt  c_11_256.txt  c_12_256.txt  c_13_256.txt  c_14_256.txt  c_15_256.txt  c_16_256.txt  c_17_256.txt  c_18_256.txt  c_19_256.txt  c_1_256.txt  c_20_256.txt  c_21_256.txt  c_22_256.txt  c_23_256.txt  c_24_256.txt  c_25_256.txt  c_26_256.txt  c_27_256.txt  c_28_256.txt  c_29_256.txt  c_2_256.txt  c_30_256.txt  c_31_256.txt  c_32_256.txt  c_33_256.txt  c_34_256.txt  c_35_256.txt  c_36_256.txt  c_37_256.txt  c_38_256.txt  c_39_256.txt  c_3_256.txt  c_40_256.txt  c_41_256.txt  c_42_256.txt  c_43_256.txt  (+23 more)
src/config/amd_epyc7542_1s_4n/: c_300_256.txt  c_301_256.txt
src/config/amd_epyc7543_2s_2n/: c_0.txt  c_0_256.txt  c_1.txt  c_10.txt  c_100_256.txt  c_101_256.txt  c_102_256.txt  c_10_256.txt  c_11.txt  c_11_256.txt  c_12.txt  c_12_256.txt  c_13.txt  c_13_256.txt  c_14.txt  c_14_256.txt  c_15.txt  c_15_256.txt  c_16.txt  c_16_256.txt  c_17.txt  c_17_256.txt  c_18.txt  c_18_256.txt  c_19.txt  c_19_256.txt  c_1_256.txt  c_2.txt  c_20.txt  c_200_256.txt  c_201_256.txt  c_20_256.txt  c_21.txt  c_21_256.txt  c_22.txt  c_22_256.txt  c_23.txt  c_23_256.txt  c_24.txt  c_24_256.txt  (+110 more)
src/config/amd_epyc7543_2s_8n/: c_0.txt  c_0_1000.txt  c_0_256.txt  c_1.txt  c_10.txt  c_100_256.txt  c_101_256.txt  c_102_256.txt  c_10_1000.txt  c_10_256.txt  c_11.txt  c_11_1000.txt  c_11_256.txt  c_12.txt  c_12_1000.txt  c_12_256.txt  c_13.txt  c_13_1000.txt  c_13_256.txt  c_14.txt  c_14_1000.txt  c_15.txt  c_15_1000.txt  c_16.txt  c_16_1000.txt  c_16_256.txt  c_17.txt  c_17_1000.txt  c_17_256.txt  c_18.txt  c_18_1000.txt  (+173 more)
src/dataset/: create.py  down_sample.py  ds_dwn.sh  uni100k.txt
src/generators/: Generator.cpp  Generator.hpp  ScrambledZipfianGenerator.hpp  UniformGenerator.hpp  ZipfianGenerator.hpp
src/profiling/: PCMMem.cpp  PCMMem.hpp  PerfCounters.hpp
src/qstamp_features/: g0.txt  g1.txt  g10.txt  g11.txt  g12.txt  g13.txt  g14.txt  g15.txt  g16.txt  g17.txt  g18.txt  g19.txt  g2.txt  g20.txt  g21.txt  g22.txt  g23.txt  g24.txt  g25.txt  g26.txt  g27.txt  g28.txt  g29.txt  g3.txt  g30.txt  g31.txt  g35.txt  g39.txt  g4.txt  g40.txt  g41.txt  g42.txt  g43.txt  g44.txt  g45.txt  g46.txt  g47.txt  g48.txt  g49.txt  g5.txt  (+48 more)
src/scheduling/: GM.cpp  GM.hpp  RM.cpp  RM.hpp
src/shared-headers/: Exceptions.hpp  PerfEvent.hpp  PerfEvent_arm.hpp  PerfEvent_intel.hpp  Units.hpp
src/stamp_model/: lr_coeff_acc.txt  lr_coeff_ins.txt
src/storage/: index.h  indexkey.h
src/threads/: TPM.cc  TPM.hpp  threadpool.cc  threadpool.hpp  woker_thread.cc
src/utils/: FNVHash.cpp  FNVHash.hpp  Misc.cpp  Misc.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ScrambledZipfGenerator.cpp  ScrambledZipfGenerator.hpp  YCSBUtils.hpp  ZipfDist.hpp  ZipfGenerator.cpp  ZipfGenerator.hpp  gflags.h
src/workloads/: TPM.cc  osm_workloadc  wiki_workloada2_85  wiki_workloada_13  wiki_workloade_13  wiki_workloade_37  ycsb_workloada_1  ycsb_workloada_25  ycsb_workloada_3  ycsb_workloada_33  ycsb_workloada_49  ycsb_workloade  ycsb_workloade1_61  ycsb_workloade_1  ycsb_workloade_13  ycsb_workloadf_37  ycsb_workloadf_49  ycsb_workloadh
src/ycsbc/: core_workload.cpp  core_workload.h  generator.cpp  generator.h  normal_generator.h  scrambled_zipfian_generator.h  uniform_generator.h  zipfian_generator.h
(+1278 files in other folders)
